List 타입으로 수정 및 주석 추가